--- a/snack-game/index.html
+++ b/snack-game/index.html
@@ -1,100 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Snake-Game</title>
+    <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Snake-Game</title>
-  <!-- Script JS Snake Game -->
-  <script src="script.js"></script>
-  <!-- Style Css Snake Game -->
-  <link rel="stylesheet" href="index.css">
-  <!-- Link Css Online Boostrap -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-
-<body onload="draw()">
-
-  <div class="gamePage text-center">
+  <body onload="draw();">
     <div class="container">
-      <h1>Snake</h1>
-      <hr>
-      <div id="startBtn" class="btn mt-2 mb-4">START</div>
+      <div class="title-game text-center">
+        <h1><i>Snake Game</i></h1>
+        <hr />
+      </div>
+      <!-- head n body  -->
+      <img
+        id="head1"
+        style="display: none"
+        width="20"
+        height="20"
+        src="assets/img/head1.png"
+        alt="Snake"
+      />
+      <img
+        id="body1"
+        style="display: none"
+        width="20"
+        height="20"
+        src="assets/img/body1.png"
+        alt="Snake"
+      />
+      <!-- apple, heart, snakeBoard -->
+      <img
+        id="heart"
+        style="display: none"
+        width="40"
+        height="40"
+        src="assets/img/heart.png"
+        alt="Heart"
+      />
+      <img
+        id="apple"
+        style="display: none"
+        width="20"
+        height="20"
+        src="assets/img/apple.png"
+        alt="Apple"
+      />
       <div class="row">
-        <div class="col-sm">
-          <div class="life">
-            <h5>Life:</h5>
-            <img src="assets/img/heart.png" alt="life-Picture">
+        <div class="col-xl">
+          <div class="snake-board">
+            <canvas
+              id="snakeBoard"
+              width="600"
+              height="600"
+              style="border: 1px solid #000000"
+            ></canvas>
           </div>
         </div>
-        <div class="col-sm">
-          <h5>Level:</h5>
-          <p>1</p>
-        </div>
-        <div class="col-sm">
-          <!-- <canvas id="score1Board" width="100" height="100" style="border: 1px solid #fbff09"></canvas> -->
-          <div class="score">
-            <h5>Score:</h5>
-            <canvas id="score1Board" width="50" height="50"></canvas>
+        <div
+          class="col-xl"
+          style="background-color: gainsboro; border-radius: 10px"
+        >
+          <div class="snake-fitur">
+            <p>Score:</p>
+            <canvas id="score1Board" width="50" height="45"></canvas>
+            <p>Speed:</p>
+            <canvas id="speed" width="50" height="45"></canvas>
           </div>
         </div>
       </div>
     </div>
-    <div class="container">
-      <!-- Soal no 3: Tambahkan resource gambar untuk ditampilkan di canvas -->
-      <img id="apple" style="display: none" width="20" height="20" src="assets/img/apple.png" alt="Apple" />
-      <!-- Soal no 1: Ubah nilai width dan height menjadi 600 pada element canvas:  -->
-      <div class="snake">
-        <canvas id="snakeBoard" width="500" height="500"></canvas>
-      </div>
-    </div>
-  </div>
-
-
-  <!-- JavaScript Boostrap -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-  </script>
-  <!-- JavaScript Boostrap -->
-</body>
-
+  </body>
 </html>
-
-
-
-
-
-
-
-<!-- Code Yang Lama -->
-<!-- <html>
-<head>
-    <title>Snake Game</title>
-</head>
-<script type="text/javascript" src="script.js"></script>
-<link rel="stylesheet" href="index.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-<body onload="draw();">
-    <div class="gamePage d-flex flex-column justify-content-center align-items-center">
-        <h1>Snake</h1>
-        <div id="startBtn" class="btn mt-2 mb-4">START</div>
-        <div class="rel">
-            <h2 class="mt-3"><span class="result"><img src="assets/img/heart.png" alt="heart"></span><span
-                    id="heart">3</span></h2>
-        </div>
-        <!-- Soal no 3: Tambahkan resource gambar untuk ditampilkan di canvas -->
-        <!-- <img id="apple" style="display: none" width="20" height="20" src="assets/img/apple.png" alt="Apple" />
-        Soal no 1: Ubah nilai width dan height menjadi 600 pada element canvas: 
-        <canvas id="snakeBoard" width="500" height="500"></canvas>
-        <canvas id="score1Board" width="100" height="100" style="border: 1px solid #fbff09"></canvas>
-</body>
-</html> --> -->
